# mc-safe-rl-qp

./: LICENSE  README.md
ExperimentLogs/H1/: plot.ipynb  plot_simu.ipynb  (+1 more)
all_mc_rtc_src/h1_mj_description/: CMakeLists.txt  README.md
all_mc_rtc_src/h1_mj_description/mc_mujoco/: h1.in.yaml
all_mc_rtc_src/h1_mj_description/xml/: h1.xml
all_mc_rtc_src/mc_h1/: CMakeLists.txt  README.md
all_mc_rtc_src/mc_h1/src/: config.h.in  h1.cpp  h1.h
all_mc_rtc_src/mc_h1/tests/: CMakeLists.txt  test_module.cpp  test_module.in.h
all_mc_rtc_src/mc_kinova/: CMakeLists.txt  README.md
all_mc_rtc_src/mc_kinova/convex/kinova/: FT_adapter-ch.txt  FT_sensor_mounting-ch.txt  base_link-ch.txt  bracelet_link-ch.txt  forearm_link-ch.txt  half_arm_1_link-ch.txt  half_arm_2_link-ch.txt  shoulder_link-ch.txt  spherical_wrist_1_link-ch.txt  spherical_wrist_2_link-ch.txt
all_mc_rtc_src/mc_kinova/etc/ForceSensorCalibration/: kinova.yaml
all_mc_rtc_src/mc_kinova/meshes/: DS4_Adapter.STL  DS4_adapter.STL
all_mc_rtc_src/mc_kinova/meshes/force_sensor/: adapter.STL
all_mc_rtc_src/mc_kinova/rsdf/kinova_default/: kinova_linkA7.rsdf
all_mc_rtc_src/mc_kinova/src/: CMakeLists.txt  config.in.h  kinova.cpp  kinova.h  module.cpp
all_mc_rtc_src/mc_kinova/tests/: CMakeLists.txt
all_mc_rtc_src/mc_kinova/xacro/: gen3_w_FT_sensor.in.xacro  gen3_w_FT_sensor.xacro  gen3_w_bota_FT_sensor.in.xacro
all_mc_rtc_src/mc_kortex/: CMakeLists.txt  README.md
all_mc_rtc_src/mc_kortex/etc/: sample.yaml
all_mc_rtc_src/mc_kortex/src/: CMakeLists.txt  KinovaControlLoop.cpp  KinovaControlLoop.h  KinovaRobot.cpp  KinovaRobot.h  main.cpp  mc_kortex.cpp  mc_kortex.h
all_mc_rtc_src/mc_residual_estimation/: CMakeLists.txt  README.md  package.xml
all_mc_rtc_src/mc_residual_estimation/etc/: ExternalForcesEstimator.in.yaml
all_mc_rtc_src/mc_residual_estimation/src/: ExternalForcesEstimator.cpp  ExternalForcesEstimator.h
all_mc_rtc_src/mc_ros_posture_pub_sub/: CMakeLists.txt  README.md  vcpkg.json
all_mc_rtc_src/mc_ros_posture_pub_sub/etc/: RosPosturePubSub.in.yaml
all_mc_rtc_src/mc_ros_posture_pub_sub/include/utils/: ROS2Publisher.h  ROS2Subscriber.h
all_mc_rtc_src/mc_ros_posture_pub_sub/src/: RosPosturePubSub.cpp  RosPosturePubSub.h
all_mc_rtc_src/mc_ros_posture_pub_sub/tests/: CMakeLists.txt
all_mc_rtc_src/mc_ros_posture_pub_sub/tests/etc/: mc_rtc.yaml
all_mc_rtc_src/mc_state_observation/: CMakeLists.txt  LICENSE  README.md
all_mc_rtc_src/mc_state_observation/CMakeModules/: Findmc_state_observation_ROS.cmake
all_mc_rtc_src/mc_state_observation/debian/: changelog  control  copyright  mc-state-observation-doc.doc-base  mc-state-observation-doc.install  mc-state-observation.install  ros-ROS_DISTRO-mc-state-observation.install  rules
all_mc_rtc_src/mc_state_observation/include/mc_state_observation/: AttitudeObserver.h  MocapObserver.h  MocapObserverROS.h  ObjectObserver.h  SLAMObserver.h  TiltObserver.h  filtering.h  gui_helpers.h  ros.h
all_mc_rtc_src/mc_state_observation/include/mc_state_observation/conversions/: kinematics.h
all_mc_rtc_src/mc_state_observation/include/mc_state_observation/measurements/: Contact.h  ContactWithSensor.h  ContactsManager.h  ContactsManager.hpp  ContactsManagerConfiguration.h  IMU.h  Sensor.h  measurements.h
all_mc_rtc_src/mc_state_observation/include/mc_state_observation/odometry/: LeggedOdometryManager.h
all_mc_rtc_src/mc_state_observation/src/: AttitudeObserver.cpp  CMakeLists.txt  MocapObserver.cpp  MocapObserverROS.cpp  ObjectObserver.cpp  SLAMObserver.cpp  TiltObserver.cpp  filtering.cpp
all_mc_rtc_src/mc_state_observation/src/conversions/: kinematics.cpp
all_mc_rtc_src/mc_state_observation/src/odometry/: LeggedOdometryManager.cpp
all_mc_rtc_src/posture_datastore_controller/: CMakeLists.txt  README.md  vcpkg.json
all_mc_rtc_src/posture_datastore_controller/etc/: PostureDatastoreController.in.yaml
all_mc_rtc_src/posture_datastore_controller/src/: CMakeLists.txt  PostureDatastoreController.cpp  PostureDatastoreController.h  api.h  lib.cpp
all_mc_rtc_src/posture_datastore_controller/src/states/: CMakeLists.txt  PostureDatastoreController_DefaultPosture.cpp  PostureDatastoreController_DefaultPosture.h  PostureDatastoreController_FDTask_pos.cpp  PostureDatastoreController_FDTask_pos.h  PostureDatastoreController_FDTask_torque.cpp  PostureDatastoreController_FDTask_torque.h  PostureDatastoreController_FDTask_torque_extForce.cpp  PostureDatastoreController_FDTask_torque_extForce.h  PostureDatastoreController_Initial.cpp  PostureDatastoreController_Initial.h  PostureDatastoreController_PureRL.cpp  PostureDatastoreController_PureRL.h  PostureDatastoreController_TorqueTask_pos.cpp  PostureDatastoreController_TorqueTask_pos.h  PostureDatastoreController_TorqueTask_torque.cpp  PostureDatastoreController_TorqueTask_torque.h  PostureDatastoreController_TorqueTask_torque_extForce.cpp  PostureDatastoreController_TorqueTask_torque_extForce.h
all_mc_rtc_src/posture_datastore_controller/tests/: CMakeLists.txt
all_mc_rtc_src/posture_datastore_controller/tests/etc/: mc_rtc.yaml
all_mc_rtc_src/rl_controller/: CMakeLists.txt  README.md
all_mc_rtc_src/rl_controller/etc/: RLController.in.yaml
all_mc_rtc_src/rl_controller/policy/: danger_walking.onnx  standing_policy.onnx  walking_policy.onnx
all_mc_rtc_src/rl_controller/src/: CMakeLists.txt  PolicySimulatorHandling.cpp  PolicySimulatorHandling.h  RLController.cpp  RLController.h  RLPolicyInterface.cpp  RLPolicyInterface.h  api.h  lib.cpp  utils.cpp  utils.h
all_mc_rtc_src/rl_controller/src/states/: CMakeLists.txt  Posture_FDTask_Pos.cpp  Posture_FDTask_Pos.h  Posture_FDTask_Torque.cpp  Posture_FDTask_Torque.h  Posture_TorqueTask_Pos.cpp  Posture_TorqueTask_Pos.h  Posture_TorqueTask_Torque.cpp  Posture_TorqueTask_Torque.h  PureRL_Pos.cpp  PureRL_Pos.h  PureRL_Torque.cpp  PureRL_Torque.h  RL_QP_FDTask_Pos.cpp  RL_QP_FDTask_Pos.h  RL_QP_FDTask_Torque.cpp  RL_QP_FDTask_Torque.h  RL_QP_TorqueTask_Pos.cpp  RL_QP_TorqueTask_Pos.h  RL_QP_TorqueTask_Torque.cpp  RL_QP_TorqueTask_Torque.h
config_mc_rtc/: mc_rtc.yaml
(+166 files in other folders)
