if(TARGET KinovaRobotModule)
  set(ROBOT_MODULE_PARAMS "\"KinovaRobotModule\"")
  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/loader.in.cpp" "${CMAKE_CURRENT_BINARY_DIR}/KinovaRobotModule/loader.cpp")
  add_executable(loader_KinovaRobotModule "${CMAKE_CURRENT_BINARY_DIR}/KinovaRobotModule/loader.cpp")
  target_link_libraries(loader_KinovaRobotModule PUBLIC mc_rtc::mc_rbdyn)
  add_test(NAME loader_KinovaRobotModule COMMAND loader_KinovaRobotModule "$<TARGET_FILE_DIR:KinovaRobotModule>")
endif()

if(EXISTS "${PROJECT_BINARY_DIR}/yaml/KinovaRobotModuleYAML.yaml")
  set(ROBOT_MODULE_PARAMS "\"json\", \"${PROJECT_BINARY_DIR}/yaml/KinovaRobotModuleYAML.yaml\"")
  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/loader.in.cpp" "${CMAKE_CURRENT_BINARY_DIR}/KinovaRobotModuleYAML/loader.cpp")
  add_executable(loader_KinovaRobotModuleYAML "${CMAKE_CURRENT_BINARY_DIR}/KinovaRobotModuleYAML/loader.cpp")
  target_link_libraries(loader_KinovaRobotModuleYAML PUBLIC mc_rtc::mc_rbdyn)
  add_test(NAME loader_KinovaRobotModuleYAML COMMAND loader_KinovaRobotModuleYAML "${MC_ROBOTS_RUNTIME_INSTALL_PREFIX}")
endif()
